tests/cases/should_fail/patterns/incomplete_list_pattern.stderr
error: encountered unclosed delimiter `[`, add a `]` after the inner expression
 --> $DIR/incomplete_list_pattern.hash:1:1
1 |   [a := b;
  |   ^ here
